# mgpu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: blank.yml
src/mgpu/: core.py  models.py  utils.py  validators.py
