[tool.poetry]
name = "mgpu"
version = "0.3.0"
description = ""
authors = ["Pritish Roy", "Pietro Bernardelle", "Stefano Civelli"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/roycek7/mgpu"
homepage = "https://github.com/roycek7/mgpu"

[tool.poetry.dependencies]
python = "^3.9"
vllm = "^0.6.4.post1"
pydantic = "^2.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
